# golf-reservation

./: .dockerignore  .env.example  .gitignore  .mcp.json  README.en.md  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  requirements.txt
backend/db/: init_db.py  seed_data.py
backend/host/: app.py  auth.py  confirmation.py  conversation.py  course_catalog.py  llm.py  mcp_client.py  schemas.py  session_context.py
backend/host/routes/: auth_router.py  courses_router.py  recommendations_router.py  reservations_router.py  tee_times_router.py  weather_router.py
backend/mcp_server/: server.py
backend/mcp_server/db/: __init__.py  connection.py  models.py  queries.py
backend/mcp_server/tools/: reservation.py  search.py  user.py  weather.py
backend/services/: course_discovery.py  location.py  supabase.py  weather.py
docs/: architecture.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AssistantPage.tsx  ChatBubble.tsx  ConfirmModal.tsx  LoginPage.tsx  MobileTabs.tsx  MyGolfPage.tsx  SettingsPage.tsx  Sidebar.tsx  SignupPage.tsx  TeeTimesPage.tsx  (+1 more)
scripts/: seed_db.py  start_app.sh  start_server.sh
supabase/: config.toml  seed.sql
supabase/migrations/: 20260416183000_init_golf_reservation.sql  20260416190000_runtime_views_and_rls.sql  20260416210000_complete_supabase_cutover.sql
tests/: test_api.py  test_conversation.py  test_db.py  test_host_helpers.py  test_mcp_client.py  test_tools.py
(+8 files in other folders)
